<resources>
    <string name="app_name">Score Keeper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">App version 1.0</string>
    <string name="teams">Two teams of maximum 12 players, with a maximum of five players of each team on the court at any time.

Teams may make as many substitutions as they like.</string>
    <string name="objective">The objective of the game is to put the ball in the opposing team’s basket.

The team with the most points at the end of the game wins.</string>
    <string name="duration">The game consists of four periods of 10 minutes.

If the scores are tied, overtime periods of five minutes will be played until one team has more points than the other (at the end of the 5-minute period)</string>
    <string name="scoring">A basket scored from near the basket (inside the three-point arc) is worth two points.

A basket scored from far (beyond the three-point arc) is worth three points.

A basket scored from the free-throw line is worth one point.</string>
    <string name="moving_the_ball">The ball may either be passed from one player to another, or dribbled by a player from one point to another (bounced while walking or running).

Before passing or shooting the ball, a player may take two steps (without dribbling).

Once a player has stopped dribbling, he may not start to dribble again.

Once the team in possession of the ball has passed the half-court line, it may cross back over the line with the ball.</string>
    <string name="shot_clock">When a team gains possession of the ball, they have a maximum of 24 seconds to attempt a shot.

Additionally, offensive players may not remain within the restricted area (key) for more than three consecutive seconds.</string>
    <string name="fouls">A personal foul occurs when there is illegal contact between two opponents. A player who makes more than five personal fouls is excluded from the game.

A foul made on a player attempting a shot results in the awarding of the same number of free-throws as those of the shot taken (two from inside the arc, three from outside). If a player is fouled but makes the attempted shot, the shot counts and an additional free-throw will be awarded.

Once a team has made four fouls in a period, each additional foul (on a player not attempting a shot) will result in the automatic awarding of two free-throws.</string>
    <string name="main_title">Benefits of Sports</string>
    <string name="main_title_content">Physical exercise is good for mind, body and spirit. Furthermore, team sports are good for learning accountability, dedication, and leadership, among many other traits. Putting it all together by playing a sport is a winning combination.</string>
    <string name="main_t1">Many athletes do better academically.</string>
    <string name="main_c1">Playing a sport requires a lot of time and energy. Some may think this would distract student-athletes from schoolwork. However, the opposite is true. Sports require memorization, repetition and learning — skillsets that are directly relevant to classwork. Also, the determination and goal-setting skills sports require can be transferred to the classroom.</string>
    <string name="main_t2">Sports teach teamwork and help achieve goals.</string>
    <string name="main_c2">Fighting for a common goal with a host of other players, coaches, managers and community members teaches you how to build a collective team synergy and effectively communicate the best way to solve problems en route to a victory. This will be very helpful in life when encountering problems at work, at home, or in any arena.</string>
    <string name="main_t3">Sports offer many health benefits, some less obvious.</string>
    <string name="main_c3">Clearly, sports will improve your fitness and weight goals. However, they also encourage healthy decisions such as not smoking or drinking and offer hidden health benefits such as a lower chance of getting osteoporosis or breast cancer later in life. Also, a team counting on you to show up and work hard is plenty of motivation for you to get to the gym day in and day out.</string>
    <string name="main_t4">Sports boost self-esteem. </string>
    <string name="main_c4">Watching your hard work pay off and achieving your dreams brings about tons of self-confidence. If you can achieve something in a sport or with a fitness goal, then you know you can achieve any other goal you set. This is a very rewarding and exciting process.</string>
    <string name="main_t5">Playing a sport cuts down on pressure and stress.</string>
    <string name="main_c5">Exercising is a natural way to loosen up and let go of stress. Also, you will most likely make many new friends on the team who can be there for you as a support system. When you find you are having a lot of stress, you can call up teammates and head to the gym to talk it out and play it out.</string>
    <string name="foot_t1">The Method of Scoring</string>
    <string name="foot_c1">A goal is scored when the whole of the ball passes over the goal line, between
the goalposts and under the crossbar, provided that no infringement of the
Laws of the Game has been committed previously by the team scoring the goal.</string>
    <string name="foot_t2">Winning Team</string>
    <string name="foot_c2">The team scoring the greater number of goals during a match is the winner.
If both teams score an equal number of goals, or if no goals are scored, the match is drawn.</string>
    <string name="foot_t3">Competition rules</string>
    <string name="foot_c3">When competition rules require there to be a winning team after a match
or home-and-away tie, the only permitted procedures for determining the
winning team are those approved by the International F.A. Board, namely:away goals rule, extra time, kicks from the penalty mark.</string>
    <string name="foot_t4">Goal-line technology (GLT)</string>
    <string name="foot_c4">GLT systems may be used for the purpose of verifying whether a goal has been
scored to support the referee\’s decision. The use of GLT must be stipulated in
the respective competition rules.</string>
    <string name="foot_t5">Offside</string>
    <string name="foot_c5">It is not an offence in itself to be in an offside position.
A player is in an offside position if:
\n• he is nearer to his opponents’ goal line than both the ball and the second-last opponent
A player is not in an offside position if:
\n• he is in his own half of the field of play or
\n• he is level with the second-last opponent or
\n• he is level with the last two opponents
\n\n
Offence
\n\n
A player in an offside position is only penalised if, at the moment the ball
touches or is played by one of his team, he is, in the opinion of the referee,
involved in active play by:
\n• interfering with play or
\n• interfering with an opponent or
\n• gaining an advantage by being in that position
\n\n
No offence
\n\n
There is no offside offence if a player receives the ball directly from:
\n• a goal kick
\n• a throw-in
\n• a corner kick
\n\n
Infringements and sanctions
\n\n
In the event of an offside offence, the referee awards an indirect free kick
to the opposing team to be taken from the place where the infringement
occurred (see Position of free kick).</string>
    <string name="foot_t6">Fouls and Misconduct</string>
    <string name="foot_c6">Fouls and misconduct are penalised as follows:
\n\n
Direct free kick
\n\n
A direct free kick is awarded to the opposing team if a player commits any
of the following seven offences in a manner considered by the referee to be
careless, reckless or using excessive force:
\n• kicks or attempts to kick an opponent
\n• trips or attempts to trip an opponent
\n• jumps at an opponent
\n• charges an opponent
\n• strikes or attempts to strike an opponent
\n• pushes an opponent
\n• tackles an opponent
\n
A direct free kick is also awarded to the opposing team if a player commits any
of the following three offences:
\n• holds an opponent
\n• spits at an opponent
\n• handles the ball deliberately (except for the goalkeeper within his own
penalty area)
A direct free kick is taken from the place where the offence occurred
(see Position of free kick).
\n\n
Penalty kick
\n\n
A penalty kick is awarded if any of the above ten offences is committed by
a player inside his own penalty area, irrespective of the position of the ball,
provided it is in play.
\n\n
Indirect free kick
\n\n
An indirect free kick is awarded to the opposing team if a goalkeeper, inside his
own penalty area, commits any of the following four offences:
\n• controls the ball with his hands for more than six seconds before releasing
it from his possession
\n• touches the ball again with his hands after he has released it from his
possession and before it has touched another player
\n• touches the ball with his hands after it has been deliberately kicked to him
by a team-mate
\n• touches the ball with his hands after he has received it directly from a
throw-in taken by a team-mate
An indirect free kick is also awarded to the opposing team if, in the opinion of
the referee, a player:
\n• plays in a dangerous manner
\n• impedes the progress of an opponent
\n• prevents the goalkeeper from releasing the ball from his hands
\n• commits any other offence, not previously mentioned in Law 12, for which
play is stopped to caution or send off a player
The indirect free kick is taken from the place where the offence occurred
(see Position of free kick).
\n\n
Disciplinary sanctions
\n\n
The yellow card is used to communicate that a player, substitute or substituted
player has been cautioned.
The red card is used to communicate that a player, substitute or substituted
player has been sent off.
Only a player, substitute or substituted player may be shown the red or yellow
card.
The referee has the authority to take disciplinary sanctions from the moment
he enters the field of play until he leaves the field of play after the final whistle.
A player who commits a cautionable or sending-off offence, either on or off
the field of play, whether directed towards an opponent, a team-mate, the
referee, an assistant referee or any other person, is disciplined according to the
nature of the offence committed.
\n\n
Cautionable offences
\n\n
A player is cautioned and shown the yellow card if he commits any of the
following seven offences:
\n• unsporting behaviour
\n• dissent by word or action
\n• persistent infringement of the Laws of the Game
\n• delaying the restart of play
\n• failure to respect the required distance when play is restarted with a corner
kick, free kick or throw-in
\n• entering or re-entering the field of play without the referee’s permission
\n• deliberately leaving the field of play without the referee’s permission
\n
A substitute or substituted player is cautioned if he commits any of the
following three offences:
\n• unsporting behaviour
\n• dissent by word or action
\n• delaying the restart of play
\n\n
Sending-off offences
\n\n
A player, substitute or substituted player is sent off if he commits any of the
following seven offences:
\n• serious foul play
\n• violent conduct
\n• spitting at an opponent or any other person
\n• denying the opposing team a goal or an obvious goalscoring opportunity
by deliberately handling the ball (this does not apply to a goalkeeper within
his own penalty area)
\n• denying an obvious goalscoring opportunity to an opponent moving
towards the player’s goal by an offence punishable by a free kick or a
penalty kick
\n• using offensive, insulting or abusive language and/or gestures
\n• receiving a second caution in the same match
A player, substitute or substituted player who has been sent off must leave the
vicinity of the field of play and the technical area."</string>
</resources>